# agentic-ai-workflow

./: .env  .gitignore  README.md  main.py  pyproject.toml
cap_agent/: main.py  pyproject.toml
cap_agent/.adk/: session.db
cap_agent/cap/: agent.py  tools.py
cap_agent/cap/.adk/: session.db
stark_agent/: __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  tools.py
thor_agent/: __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  tools.py
